Changelog
=========


2.2.1 (unreleased)
------------------

- Do not downgrade installed version when installing an orphan upgrade step. [jone]


2.2.0 (2017-01-30)
------------------

- Add method to remove a previously uninstalled portlet manager from the
  persistent registry.
  [deiferni]


2.1.1 (2016-12-13)
------------------

- Fix support for GS import by tarball upload. [jone]


2.1.0 (2016-12-06)
------------------

- Add upgrade step method ``ensure_profile_installed(profileid)``. [jone]

- Add upgrade step method ``is_profile_installed(profileid)``. [jone]

- Add upgrade step method ``is_product_installed(product_name)``. [jone]


2.0.5 (2016-10-24)
------------------

- Migration: fix error when file obj is an empty string. [jone]


2.0.4 (2016-10-24)
------------------

- Migration: do not migrate empty blobs. [jone]


2.0.3 (2016-09-27)
------------------

- Migration: support all types of standard relation fields. [jone]


2.0.2 (2016-09-27)
------------------

- Migration: skip invalid relations. [jone]


2.0.1 (2016-09-02)
------------------

- Added support for jQuery 1.9+ on @@manage-upgrades control panel. [neilferreira]


2.0.0 (2016-08-18)
------------------

- Fix NoneType AttributeError with newest requests module. [jone]

- Drop Plone 4.1 and 4.2 support. [jone]

- Implement inplace migrator. [jone]


1.19.0 (2016-04-11)
-------------------

- Add option to force reinstall already installed profiles. [jone]


1.18.1 (2016-03-09)
-------------------

- Disable automatic CSRF protection for authorized jsonapi requests. [jone]


1.18.0 (2016-02-16)
-------------------

- Provide the attributes ``base_profile`` and ``target_version`` on
  upgrade steps when using the ``upgrade-step:directory`` directive. [jone]

- Fix profile version when using `upgrade-step:directory` and
  having old upgrade steps but no new ones. [jone]


1.17.0 (2016-01-22)
-------------------

- Add ``bin/upgrade plone_upgrade_needed`` command.  [jone]

