@@ -7,6 +7,8 @@ Changelog
 
 - Do not downgrade installed version when installing an orphan upgrade step. [jone]
 
+- Add "soft_dependencies" option to "upgrade-step:directory" directive. [jone]
+
 
 2.2.0 (2017-01-30)
 ------------------
